# simplelog

./: .gitignore  README.md  SECURITY.md  claude  cloudwatch.py  i18n.py  install.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  simplelog.spec  ui.py  version.py  workers.py
.github/workflows/: ci.yml  pages.yml  release.yml
docs/superpowers/plans/: 2026-03-25-filter-search-sidebar.md  2026-03-25-ui-overhaul-json-listview.md  2026-03-25-ui-overhaul-sidebar-kv.md
docs/superpowers/specs/: 2026-03-25-filter-search-sidebar-design.md  2026-03-25-ui-overhaul-design.md
html/: index.html
packaging/: make_icon.py
snap/: snapcraft.yaml
snap/gui/: simplelog.desktop
tests/: test_cli.py  test_cloudwatch.py  test_filter_logic.py  test_i18n.py  test_log_model.py  test_workers.py
