[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "simplelog"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
]

[project.scripts]
simplelog = "main:main"

[tool.setuptools]
py-modules = ["main", "ui", "workers", "cloudwatch", "i18n", "version"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names, …)
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long — handled per-file where needed
    "UP007", # X | Y union syntax — Qt overloads complain on older interpreters
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]  # allow unused imports in test helpers

[tool.pytest.ini_options]
testpaths = ["tests"]
